--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <hr />
 <small> &copy; Maggie Umber</small>
-<a href="about">About</a>
+{% link _pages/about.html %}
 <a href="blog">Blog</a>
 <a href="/pages/events.html">Events</a>
 <a href="/pages/reviews.html">Reviews</a>
