change footer links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
 <hr />
 <small> &copy; Maggie Umber</small>
-{% link _pages/about.html %}
+<a href="about">About</a>
+<a href="events">Events</a>
 <a href="blog">Blog</a>
-<a href="/pages/events.html">Events</a>
-<a href="/pages/reviews.html">Reviews</a>
