change header links, fix post default

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <nav>
   <h1>
     {{ page.title }}
-    <a href="/index.html"><img src="/myicon.png" class="siteIcon" /></a>
+    <a href="index"><img src="/myicon.png" class="siteIcon" /></a>
   </h1>
-  <a href="/pages/books.html">Books</a>
-  <a href="/pages/prints.html">Prints</a>
-  <a href="/pages/toys.html">Toys</a>
-  <a href="/pages/wholesale.html">Whsale</a>
+  <a href="books">Books</a>
+  <a href="prints">Prints</a>
+  <a href="toys">Toys</a>
+  <a href="whsale">Whsale</a>
   <hr />
 </nav>
