--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,11 @@
 layout: default
 ---
 
-<article id="post">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <div class="post-date">{{ page.date | date: "%b %-d, %Y" }}</div>
-    <ul class="post-categories">
-      {% for category in page.categories %}
-      <li class="post-category">{{ category }}</li>
-      {% endfor %}
-    </ul>
-  </header>
-  {{ content }}
-</article>
+<p>{{ page.date | date: "%b %-d, %Y" }}</p>
+<ul>
+  {% for category in page.categories %}
+  <li>{{ category }}</li>
+  {% endfor %}
+</ul>
+
+{{ content }}
