--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,13 @@
-<nav>
-  <h1>
-    {{ page.title }}
-    <a href="index"><img src="/myicon.png" class="siteIcon" /></a>
-  </h1>
-  <a href="books">Books</a>
-  <a href="prints">Prints</a>
-  <a href="toys">Toys</a>
-  <a href="whsale">Whsale</a>
-  <hr />
-</nav>
+<header>
+  <nav>
+    <h1>
+      {{ page.title }}
+      <a href="index"><img src="/myicon.png" class="siteIcon" /></a>
+    </h1>
+    <a href="books">Books</a>
+    <a href="prints">Prints</a>
+    <a href="toys">Toys</a>
+    <a href="whsale">Whsale</a>
+    <hr />
+  </nav>
+</header>
