change default for posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,9 @@
 layout: default
 ---
 
-<p>{{ page.date | date: "%b %-d, %Y" }}</p>
-<ul>
-  {% for category in page.categories %}
-  <li>{{ category }}</li>
-  {% endfor %}
-</ul>
+<time
+  >{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author
+  }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time
+>
 
 {{ content }}
