--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- LINKS TO CSS FILE ("STYLESHEET"), GOOGLE FONTS AND SITE ICON -->
-  <link rel="stylesheet" href="/css/style-sheet.css" />
+  <link rel="stylesheet" href="/assets/css/style-sheet.css" />
   <link href="/myicon.png" rel="icon" type="image/png" />
 </head>
