--- a/assets/css/style-sheet.css
+++ b/assets/css/style-sheet.css
@@ -4,7 +4,18 @@
   box-sizing: border-box;
 }
 
+/* body font */
+/* Lato is a sans-serif typeface designed by Łukasz Dziedzic.(https://www.fontsquirrel.com/fonts/lato) */
+@font-face {
+  font-family: 'latoregular';
+  src: url("/assets/fonts/lato/lato-regular-webfont.woff2") format('woff2'),
+       url("/assets/fonts/lato/lato-regular-webfont.woff") format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* headline & bold font */
+/* Chunk by Meredith Mandel (https://www.theleagueofmoveabletype.com/chunk) */
 @font-face {
   font-family: "Chunk-master";
   src: url("/assets/fonts/chunk-master/webfonts/ChunkFive-Regular.woff2")
@@ -16,7 +27,7 @@
 }
 
 body {
-  font-family: "Noto Sans", "Roboto", sans-serif;
+  font-family: "latoregular", sans-serif;
   font-weight: 300;
   letter-spacing: 0.08em;
   font-size: 18px;
