add events, shorten paragraphs, move footer links to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,14 @@
   <nav>
     <h1>
       {{ page.title }}
-      <a href="index.html"
-        ><img src="/assets/images/myicon.png" class="siteIcon"
-      /></a>
     </h1>
     <a href="books">Books</a>
     <a href="prints">Prints</a>
     <a href="toys">Toys</a>
-    <a href="wholesale">Whsale</a>
+    <a href="index.html"><img src="/assets/images/myicon.png" class="siteIcon"/></a>
+    <a href="about">About</a>
+    <a href="events">Events</a>
+    <a href="blog">Blog</a>
     <hr />
   </nav>
 </header>
