--- a/assets/css/style-sheet.css
+++ b/assets/css/style-sheet.css
@@ -108,7 +108,10 @@ h2 {
 p,
 ul {
   margin-left: auto;
+  margin-right: auto;
   padding: 10px;
+  width: 80%;
+  /* text-align: justify; */
 }
 
 ol {
@@ -117,6 +120,9 @@ ol {
 
 li {
   list-style-type: none;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
 }
 
 a {
