change img file sizes for cutw, jonesy. update header and footer links, change font sizes

--- a/_includes/book-blurbs.html
+++ b/_includes/book-blurbs.html
@@ -1,7 +1,5 @@
 <!-- blurbs -->
 <h2>Blurbs</h2>
-<ul>
   {% for blurb in page.blurbs %}
-  <li><p>{{ blurb }}</p></li>
+<p>{{ blurb }}</p>
   {% endfor %}
-</ul>
