--- a/_includes/book-events.html
+++ b/_includes/book-events.html
@@ -1,7 +1,5 @@
 <!-- events -->
 <h2>Events</h2>
-<ul>
   {% for event in page.events %}
-  <li><p>&#9997; {{ event }}</p></li>
+<p>&#9997; {{ event }}</p>
   {% endfor %}
-</ul>
