--- a/_includes/book-reviews.html
+++ b/_includes/book-reviews.html
@@ -1,7 +1,5 @@
 <!-- reviews -->
 <h2>Reviews</h2>
-<ul>
   {% for review in page.reviews %}
-  <li><p>{{ review }}</p></li>
+  <p>{{ review }}</p>
   {% endfor %}
-</ul>
