--- a/_includes/book-summary.html
+++ b/_includes/book-summary.html
@@ -1,7 +1,5 @@
 <!-- summary -->
 <h2>Summary</h2>
-<ul>
   {% for summary in page.summaries %}
-  <li><p>{{ summary }}</p></li>
+  <p>{{ summary }}</p>
   {% endfor %}
-</ul>
