--- a/_includes/content-print.html
+++ b/_includes/content-print.html
@@ -13,20 +13,8 @@
   </figure>
 </div>
 
-<h2>Description of Materials</h2>
-<ul>
-  <li>Greeting card:</li>
-  <ul>
-    <li>☞ a high-quality inkjet print</li>
-    <li>☞ in a plastic sleeve with envelope</li>
-  </ul>
-  <br />
-  <li>Print:</li>
-  <ul>
-    <li>☞ 3 print sizes available</li>
-    <li>☞ a high-quality inkjet print on glossy photo paper</li>
-    <li>☞ in a plastic sleeve with matboard backing</li>
-  </ul>
-</ul>
+<p>There are generally 3 print sizes available. Each print is a high-quality inkjet on glossy photo paper.
+  It's packaged in a plastic sleeve with a matboard backing.</p>
+<p>Each greeting card is a high-quality inkjet print. It arrives in a plastic sleeve with an envelope.</p>
 
 {% include random.html %}
