--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
 <footer>
   <small> &copy; Maggie Umber</small>
+  <a href="index.html"><img src="/assets/images/myicon.png" class="siteIcon"/></a>
 </footer>
