update 270 button appearance

--- a/assets/css/style-sheet.css
+++ b/assets/css/style-sheet.css
@@ -32,7 +32,7 @@ body {
   letter-spacing: 0.08em;
   font-size: 15px;
   line-height: 1.8em;
-  background-color: #ebf1f8;
+  background-color: #eff2f9;
   max-width: 1200px;
   color: #140808;
   margin: 100px auto 100px auto;
