add RSS link to head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,9 @@
   <meta name="author" content="Maggie Umber" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- LINK TO RSS -->
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+
   <!-- LINKS TO CSS FILE ("STYLESHEET"), GOOGLE FONTS AND SITE ICON -->
   <link rel="stylesheet" href="/assets/css/style-sheet.css" />
   <link rel="icon" href="/assets/images/myicon.png" />
