add author name

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   <!-- LINK TO RSS -->
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
-  <!-- LINKS TO CSS FILE ("STYLESHEET"), GOOGLE FONTS AND SITE ICON -->
+  <!-- LINKS TO CSS FILE ("STYLESHEET") AND SITE ICON -->
   <link rel="stylesheet" href="/assets/css/style-sheet.css" />
   <link rel="icon" href="/assets/images/myicon.png" />
 </head>
