update cutw production post, add greeting cards

--- a/_includes/products-prints.html
+++ b/_includes/products-prints.html
@@ -27,6 +27,9 @@
                 <option value="Print: 8.5x11 inches,">
                   Print: 8.5x11 inches, $16.00 USD
                 </option>
+                <option value="Greeting Card:">
+                  Greeting Card: $4.00 USD
+                </option>
               </select>
             </td>
           </tr>
