add new button across site, change toys to single page, add new toy

--- a/_includes/products-prints.html
+++ b/_includes/products-prints.html
@@ -1,5 +1,5 @@
 <figure class="gallery-item">
-  <a href="{{ item.cover.path }}" target="_blank">
+  <a href="{{ item.cover.path }}">
     <img class="thumbnail-300"
         src="{{ item.cover.path }}"
         alt="{{ item.cover.alt }}"
