fix link on index, add RBRvol6 to books, match books toys and prints to each other

--- a/_includes/random-wholesale.html
+++ b/_includes/random-wholesale.html
@@ -3,7 +3,7 @@
 <!-- related products -->
 <h2>Related Products</h2>
 <div class="gallery">
-  {% assign all_products = site.data.products.wholesale %} {% assign
+  {% assign all_products = site.data.books.wholesale %} {% assign
   random_items = all_products | sample: 3 %} {% for item in random_items %} {%
-  include products.html %} {% endfor %}
+  include products-books.html %} {% endfor %}
 </div>
