change header nav, add terms

--- a/_includes/content-wholesale.html
+++ b/_includes/content-wholesale.html
@@ -1,4 +1,4 @@
-{% include paypal.html %} {% include book-summary.html %} {% include
-preview-600.html %} {% include book-blurbs.html %} {% include book-reviews.html
-%} {% include book-events.html %} {% include book-trailer.html %} {% include
+{% include paypal.html %} {% include wholesale-terms.html %} {% include book-summary.html %} 
+{% include preview-600.html %} {% include book-blurbs.html %} {% include book-reviews.html
+%} {% include book-trailer.html %} {% include book-events.html %} {% include
 random-wholesale.html %}
