--- a/_includes/random-wholesale.html
+++ b/_includes/random-wholesale.html
@@ -1,9 +1,9 @@
 <p>🖤</p>
 
-<!-- related products -->
-<h2>Related Products</h2>
+<!-- related -->
+<h2>You might like...</h2>
 <div class="gallery">
   {% assign all_products = site.data.books.wholesale %} {% assign
-  random_items = all_products | sample: 3 %} {% for item in random_items %} {%
-  include products-books.html %} {% endfor %}
+  random_items = all_products | sample: 3 %} {% for item in random_items %} 
+  {% include products-books.html %} {% endfor %}
 </div>
