--- a/_includes/random.html
+++ b/_includes/random.html
@@ -1,8 +1,7 @@
 <p>🖤</p>
 
-<!-- related products -->
+<!-- related -->
 <h2>You might like...</h2>
-
 <div class="gallery">
   {% assign all_products = site.data.books.graphicnovels | concat:
   site.data.books.zines %} 
