--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
     <a href="books">Books</a>
     <a href="prints">Prints</a>
     <a href="toys">Toys</a>
-    <a href="about">About</a>
-    <a href="events">Events</a>
+    <a href="wholesale">Wholesale</a>
+    <a href="bio">Bio</a>
     <a href="blog">Blog</a>
     <h1>
       {{ page.title }}
