--- a/_includes/paypal.html
+++ b/_includes/paypal.html
@@ -16,9 +16,9 @@
         method="post"
       >
         <p>
-          {{ page.price }} <br />
           {{ page.pages }}<br />
-          {{ page.materials }}
+          {{ page.materials }} <br />
+          {{ page.price }}
         </p>
 
         <input type="hidden" name="cmd" value="_s-xclick" />
